<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    tools:context="fi.aalto.narcolepticninjas.shareapicture.GroupInfoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/manage_group_info_title"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="8dp" />

    <TextView
        android:text="@string/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/manage_group_name"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="24dp" app:layout_constraintLeft_toLeftOf="parent"
    />

    <TextView
        android:text="@string/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/manage_group_expiry"
        app:layout_constraintTop_toBottomOf="@+id/manage_group_name"
        android:layout_marginStart="24dp" app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/manage_group_members_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textView4"
        android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/manage_group_expiry"
        android:layout_marginStart="24dp" app:layout_constraintLeft_toLeftOf="parent"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp" android:id="@+id/manage_group_members"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginStart="24dp" app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="0dp" android:layout_marginLeft="24dp"
        app:layout_constraintHorizontal_bias="1.0" android:layout_marginRight="24dp"
        android:dividerHeight="0dp"
        android:divider="@null"
    />
    <TextView
        android:text="@string/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/manage_group_loading_members"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginStart="24dp" app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:text="@string/manage_group_add_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/manage_group_invite_btn"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="doAddUser" android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/manage_group_members"
    />
    <Button
        android:text="@string/manage_group_leave_btn"
        android:id="@+id/manage_group_leave_btn"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/manage_group_invite_btn"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:onClick="doLeaveGroup"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/manage_group_members" />

    <Button
        android:text="@string/manage_group_delete_btn"
        android:visibility="gone"
        android:id="@+id/manage_group_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/manage_group_invite_btn"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:onClick="doDeleteGroup"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/manage_group_members" />

</android.support.constraint.ConstraintLayout>
