<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="fi.aalto.narcolepticninjas.shareapicture.SigninActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp" app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:gravity="center"
            android:id="@+id/sign_in_container" android:visibility="gone">
        <TextView
                android:text="@string/label_sign_in_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/sign_in_title" android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:layout_marginBottom="8dp"/>
        <TextView
                android:text="@string/label_sign_in_required_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/sign_in_explanation" android:layout_weight="1"
                android:layout_marginBottom="8dp" android:textAlignment="center"/>
        <Button
                android:text="@string/label_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/sign_in_button" android:layout_weight="1"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
