<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="fi.aalto.narcolepticninjas.shareapicture.CreateGroupActivity"
                                             android:layout_margin="16dp">
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp" app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/group_name_input">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_group_name_hint"
            android:id="@+id/group_name_input_et"
            android:maxLength="100"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_name_input"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/group_expiry_day_input">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_group_expiry_date_hint"
            android:id="@+id/group_expiry_date_input_et"
            android:editable="false"
            android:clickable="true"
            android:onClick="doOpenDatePicker"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp" app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/group_expiry_time_input"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/group_expiry_day_input">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_group_expiry_time_hint"
            android:id="@+id/group_expiry_time_input_et"
            android:editable="false"
            android:clickable="true"
            android:onClick="doOpenTimePicker"
            android:maxLength="100"/>

    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>
