<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    tools:context="fi.aalto.narcolepticninjas.shareapicture.MenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <GridLayout
            android:id="@+id/menu_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:useDefaultMargins="true"
            android:columnCount="2"
            android:rowCount="2" tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                android:clickable="true"
                android:onClick="doShowGallery"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/btn_gallery"
                android:gravity="center">

                <ImageView
                    android:layout_width="64dp"
                    android:adjustViewBounds="true"
                    android:layout_height="64dp"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_photo_library_black_24dp"
                    android:contentDescription="@string/label_gallery" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:drawableTint="@color/colorPrimary"
                    android:text="@string/label_gallery"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp" />
            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                android:clickable="true"
                android:onClick="doTakePhoto"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/btn_camera"
                android:gravity="center">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:adjustViewBounds="true"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:drawableTint="@color/colorPrimary"
                    android:text="@string/label_take_photo"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:onClick="doManageGroups"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/btn_manage_groups"
                android:gravity="center">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:adjustViewBounds="true"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_group_black_24dp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:drawableTint="@color/colorPrimary"
                    android:text="@string/label_group_management"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
        </GridLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>